# ruyi

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  CONTRIBUTING.md  CONTRIBUTING.zh.md  README.md  README.zh.md  pyproject.toml
.github/actions/compile/: action.yml
.github/actions/test/: action.yml
.github/workflows/: auto-tag.yml  black.yml  ci.yml  dist-amd64.yml  dist-riscv64.yml  dist.yml  lint.yml  pr.yml  pypi.yml  ruyi-package-ci.yml
contrib/poetry-1.x/: README.md  pyproject.toml
contrib/shell-completions/zsh/: _ruyi
debian/: changelog  control  rules
docs/: README.md  build-recipes-design.md  building.md  ci-release-automation.md  ci-self-hosted-runner.md  dep-baseline.md  multi-repo-design.md  multi-repo.md  naming-of-devices-and-images.md  platform-compatibility.md  programmatic-usage.md  repo-pkg-versioning-convention.md  repo-structure.md
resources/: _ruyi_completion  make-ruyi-ico.sh  release-notes-header-template.md
resources/bundled/: meson-cross.ini.jinja  prompt.venv-created.txt.jinja  prompt.venv-created.zh_CN.txt.jinja  ruyi-activate.fish.jinja  ruyi-venv.toml.jinja
resources/po/zh_CN/LC_MESSAGES/: argparse.po  ruyi.po
ruyi/: __init__.py  __main__.py  log.py  version.py
ruyi/cli/: __init__.py  builtin_commands.py  cmd.py  completer.py  completion.py  config_cli.py  main.py  mux.py  nuitka.py  oobe.py  prereqs.py  self_cli.py  user_input.py  version.py  version_cli.py
ruyi/config/: __init__.py  editor.py  errors.py  news.py  schema.py
ruyi/device/: provision.py  provision_cli.py
ruyi/i18n/: __init__.py  fluent_adapter.py
ruyi/log/: __init__.py
ruyi/mux/: .gitignore  probe.py  runtime.py  venv.py  venv_cfg.py  venv_maker.py
ruyi/mux/activation/: data.py  ruyi-activate.bash.jinja
ruyi/pluginhost/: __init__.py  api.py  build_api.py  ctx.py  paths.py  plugin_cli.py  sandboxed_xingque.py  traits.py  unsandboxed.py
ruyi/resource_bundle/: __init__.py  __main__.py  data.py
ruyi/resources/: _ruyi_completion
ruyi/ruyipkg/: admin_checksum.py  admin_cli.py  atom.py  augmented_pkg.py  build_runner.py  canonical_dump.py  check.py  check_cli.py  checksum.py  cli_completion.py  composite_repo.py  distfile.py  entity.py  entity_cli.py  entity_provider.py  fetch.py  fetcher.py  host.py  install.py  install_cli.py  install_size.py  list.py  list_cli.py  list_filter.py  manifest_io.py  migration.py  msg.py  news.py  news_cli.py  news_store.py  pkg.py  pkg_cli.py  pkg_manifest.py  profile.py  profile_cli.py  protocols.py  provisioner.py  recipe_project.py  repo.py  repo_cli.py  (+5 more)
ruyi/ruyipkg/arch/: __init__.py  riscv.py
ruyi/telemetry/: __init__.py  aggregate.py  event.py  node_info.py  provider.py  scope.py  store.py  telemetry_cli.py
ruyi/utils/: ar.py  ci.py  frontmatter.py  git.py  git_progress.py  global_mode.py  l10n.py  markdown.py  mounts.py  node_info.py  nuitka.py  porcelain.py  prereqs.py  ssl_patch.py  templating.py  toml.py  url.py  xdg_basedir.py
scripts/: _dist_version_helper.py  _image_tag_base.sh  _ruyi_completion  build-and-push-dist-image.sh  build-and-push-gha-dist-image.sh  build-dist-image.sh  build-pygit2.py  build-xingque.py  bump-release.py  check-license.sh  check-ruff.sh  collect-dep-versions.sh  dist-gha.sh  dist-inner.py  dist-inner.sh  dist.ps1  dist.sh  gen_matrix.py  i18n-helper.py  install-baseline-deps.sh  lint-bundled-resources.sh  lint-cli-startup-flow.py  lint-poetry-1-metadata.py  lint-shell-scripts.sh  lint-version-metadata.py  make-release-tag.py  make-reproducible-source-tarball.sh  organize-release-artifacts.py  requirements.baseline.txt  set-gha-env.py
scripts/debian/: changelog  control  copyright  python3-ruyi.install  rules
scripts/debian/tests/: control  python3-ruyi
scripts/debian/upstream/: metadata
scripts/dist-image/: Dockerfile  Dockerfile.amd64  Dockerfile.riscv64  build-python.sh  prepare-distro.amd64.sh  prepare-distro.debian.sh  prepare-distro.riscv64.sh  prepare-distro.sh  prepare-distro.ubuntu2004.sh  prepare-distro.ubuntu2204-riscv64.sh  prepare-poetry.sh
scripts/patches/: 0001-Onefile-Respect-XDG_CACHE_HOME-when-rendering-CACHE_.patch
scripts/patches/nuitka/: 0001-Onefile-Preserve-the-original-argv-0-in-__compiled__.patch  0001-workaround-libatomic-linkage-for-static-libpython-on.patch  0002-Revert-Fix-need-to-prevent-Anaconda-and-poetry-witho.patch
scripts/release-worker/: ruyi-ci-sync-release.service  ruyi-ci-sync-release.timer  sync-releases.py
scripts/spec/: python-ruyi-oe.spec  python-ruyi.spec
stubs/: _compression.pyi  arpy.pyi
stubs/fastjsonschema/: __init__.pyi  exceptions.pyi
stubs/frontmatter/: __init__.pyi  conftest.pyi  default_handlers.pyi  util.pyi
stubs/lz4/: __init__.pyi  _version.pyi  version.pyi
stubs/lz4/block/: __init__.pyi  _block.pyi
stubs/lz4/frame/: __init__.pyi  _frame.pyi
stubs/pygit2/: __init__.pyi  _pygit2.pyi  blob.pyi  branches.pyi  callbacks.pyi  config.pyi  credentials.pyi  filter.pyi  index.pyi  references.pyi  remotes.pyi  repository.pyi  settings.pyi  submodules.pyi  utils.pyi
tests/cli/: test_completion.py
tests/config/: test_editor.py  test_installation_config.py  test_repos_config.py  test_schema.py
tests/fixtures/: __init__.py  cpp-for-host_14-20240120-6_riscv64.deb  generate_unpack_fixtures.py
tests/integration/: test_admin_build_package.py  test_admin_check.py  test_cli_basic.py  test_multi_repo.py  test_venv_cli.py
tests/pluginhost/: test_api.py  test_build_recipe_api.py  test_lang.py  test_lint_module.py  test_paths.py  test_recipe_build_ctx.py
tests/rit-suites/: ruyi-gha.yaml
tests/ruyipkg/: test_build_runner.py  test_check.py  test_checksum.py  test_composite_repo.py  test_entity.py  test_entity_providers.py  test_format_manifest.py  test_host.py  test_install_size.py  test_migration.py  test_recipe_project.py  test_repo_entry.py  test_repo_git.py  test_state.py  test_unpack.py
tests/utils/: test_global_mode.py  test_l10n.py  test_mounts.py  test_node_info.py  test_prereqs.py  test_templating.py  test_toml.py  test_xdg_basedir.py
(+44 files in other folders)
