[tool.poetry]
name = "ruyi"
version = "0.22.0-alpha.20241102"
description = "Package manager for RuyiSDK"
keywords = ["ruyi", "ruyisdk"]
# license = { file = "LICENSE-Apache.txt" }
license = "Apache-2.0"
readme = "README.md"
authors = [
  # { name = "WANG Xuerui", email = "wangxuerui@iscas.ac.cn" }
  "WANG Xuerui <wangxuerui@iscas.ac.cn>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
include = ["ruyi/py.typed"]

[tool.poetry.scripts]
ruyi = "ruyi.__main__:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["ruyi", "scripts", "tests"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# https://github.com/eyeseast/python-frontmatter/issues/112
# https://github.com/python/mypy/issues/8545
# have to supply the typing info until upstream releases a new version with
# the py.typed marker included
mypy_path = "./stubs"


[tool.pylic]
safe_licenses = [
  "Apache Software License",
  "BSD License",
  "GPLv2 with linking exception",
  "MIT License",
  "Mozilla Public License 2.0 (MPL 2.0)", # needs mention in license notices
  "Python Software Foundation License",
]


[tool.poetry.dependencies]
python = ">=3.10"

arpy = "^2.3.0"
certifi = "^2024.2"
jinja2 = "^3"
packaging = "^24.0"
pygit2 = "^1.14.0"
pyyaml = "^6.0.1"
requests = "^2"
rich = "^13.5"
semver = "^3"
tomlkit = "^0.12.4"
tomli = { version = "^2.1.0", python = "<3.11" }

types-cffi = "^1.16.0.20240106"
types-pygit2 = "^1.14.0.20240317"
types-PyYAML = "^6.0.12.20240311"
types-requests = "^2.31.0.20240311"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.2.2"
ruff = "^0.3.4"

[tool.poetry.group.dist.dependencies]
nuitka = "^2.0"

[tool.poetry.group.release-worker.dependencies]

[tool.pytest.ini_options]
testpaths = ["tests"]
